@@ -13,6 +13,8 @@ installer      = Author::Plicease::MakeMaker
 github_user    = Perl5-FFI
 irc            = irc://irc.perl.org/#native
 
+diag = +FFI::Platypus::Lang::Fortran
+
 diag_preamble = | $post_diag = sub {
 diag_preamble = |   require FFI::Build::Platform;
 diag_preamble = |   diag "[PLATFORM]\n";
